# genai-engineer-analysis

./: .cursorignore  .gitignore  ANALYSIS_RESULTS.md  ANALYSIS_SUMMARY.md  CODING_BOOK.md  COMPARISON_OF_REPORTS.md  LOG.md  PIPELINE.md  PLAN.md  README.md  REPORT.md  REPORT_202508.md  REPORT_202509_02.md  REVIEW_2025_09.md  THREATS_TO_VALIDITY.md  analysis_pipeline.py  analyze_clusters.py  config.py  pyproject.toml  requirements.txt  sanitize_commits.py  semantic_clustering.py  visualize_clusters.py
Evaluate job ads/: eval_report.txt  eval_result.json  evaluate_jobads.py  gold.jsonl  method.md  pred.jsonl  results mockup.md
clustering/: README.md
data/: CAIN2022.txt  analysis_review_log.csv  automated_analysis_consolidated.csv  automated_analysis_per_job.csv  automated_analysis_profiles.csv  clustered_jobs.csv  consolidated_deduplicated.csv  validation_sample.csv
data/analysis_results/: chi_squared_results.csv  crosstab_profiles_vs_topics.csv  focus_by_job.csv  job_task_jobs_counts.csv  job_topic_mapping.csv  normalized_crosstab_job_task.csv  normalized_crosstab_soft_skill.csv  normalized_crosstab_technology.csv  (+5 more)
data_archive/: consolidated.csv
docs/: Generative AI in the Netherlands_ A Comprehensive Terminology Report.md  METHODOLOGY.md  The AI Job Market for Engineers in 2025_ A Comprehensive Field Research Report.md  genAI-replaced-CAIN2022.txt
original method/: analysis_pipeline.py  config.py  consolidate_data.py  embeddings-paraphrase-multilingual-mpnet-base-v2.npy  read_pdf.py
pilot_study_coding/: analysis_job_30_cognizant.md  analysis_job_33_creative_fabrica.md  analysis_job_35_creative_fabrica.md  analysis_job_37_creative_fabrica.md  analysis_job_755_gitlab.md  analysis_job_761_ikea.md  analysis_job_766_ing_bank.md  analysis_job_767_incentro.md  analysis_job_769_klm.md
prompts/: master_prompt.md
scripts/: analysis_pipeline.py  analyze_job_ad.py  analyze_job_ads_agent.py  analyze_topics_by_profile.py  clean_analysis_output.py  consolidate_analysis.py  consolidate_automated_analysis.py  consolidate_raw_data.py  consolidate_results.py  create_validation_sample.py  deduplicate_data.py  descriptive_analysis.py  generate_report.py  research_review_app.py  statistical_analysis.py  topic_modeling.py  validation_app.py
(+4622 files in other folders)
