[project]
name = "genai-engineer-analysis"
version = "0.1.0"
description = "Analysis of GenAI engineer roles"
authors = [{ name = "Leon van Bokhorst", email = "lonn@genai.engineer" }]
dependencies = [
    "pandas",
    "openpyxl",
    "xlrd",
    "numpy",
    "pytz",
    "python-dateutil",
    "six",
    "pymupdf",
    "sentence-transformers",
    "scikit-learn",
    "umap-learn",
    "hdbscan",
    "matplotlib",
    "seaborn",
    "huggingface-hub",
    "requests",
    "urllib3",
    "idna",
    "chardet",
    "certifi",
    "transformers",
    "tqdm",
    "torch",
    "scipy",
    "Pillow",
    "typing_extensions",
    "pyyaml",
    "filelock",
    "packaging",
    "regex",
    "safetensors",
    "tokenizers",
    "joblib",
    "threadpoolctl",
    "sympy",
    "mpmath",
]
requires-python = ">=3.12" 