[tool.uv.sources]
genai-engineer-analysis = { path = "." }

[project]
name = "genai-engineer-analysis"
version = "0.1.0"
description = "Analysis of GenAI Engineer job descriptions"
authors = [
    {name = "Lonn", email = "lonn@raccoons.world"},
]
dependencies = [
    "pandas",
    "xlrd",
    "sentence-transformers",
    "umap-learn",
    "hdbscan",
    "scikit-learn",
    "matplotlib",
    "spacy",
    "numpy==1.26.4", # Pinned for Numba compatibility
    "pytz",
    "python-dateutil",
    "pip",
    "seaborn",
    "google-generativeai>=0.8.5",
    "tqdm>=4.67.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.37.0",
    "six",
    "packaging",
    "Pillow",
    "pyparsing",
    "cycler",
]
requires-python = ">=3.12"

[tool.uv.pip]
# 